Update KSI texts (Home, About KSI). Close #27

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,25 +1,45 @@
 <section class="container content-section" style="margin-bottom:40px; margin-top:50px">
 	<h2 id="about">O KSI</h2>
-	<p>KSI, neboli Korespondenční Seminář z Informatiky, je celoroční soutěž pro středoškoláky z České i Slovenské republiky organizovaná studenty Fakulty Informatiky Masarykovy Univerzity. Cílem semináře je seznámit řešitele se zajímavými oblastmi informatiky a procvičit programátorské, matematické a logické myšlení.</p>
+	<p>KSI, neboli Korespondenční Seminář z Informatiky, je celoroční soutěž pro středoškoláky z České i Slovenské republiky organizovaná studenty Fakulty Informatiky Masarykovy Univerzity. Cílem semináře je seznámit řešitele se zajímavými oblastmi informatiky a procvičit programátorské, matematické a logické myšlení.
+    Seminář je uzpůsoben jak pro úplné začátečníky, kteří si na jednoduchých příkladech procvičí danou problematiku, tak pro zkušenější řešitele, kteří se pokusí pokořit hlavní soutěžní úlohy.
+    </p>
+
+
 	<h3>Jak seminář probíhá?</h3>
-	<p>Každý ročník semináře se skládá z pěti vln. Na začátku každé vlny tě čeká několik úvodních úkolů, které ti představí dané téma, vysvětlí základní myšlenky a pojmy a procvičíš si na nich základní dovednosti, které budeš potřebovat k vyřešení soutěžních úloh. Soutěžní úlohy jsou pak různého charakteru, na jejichž vyřešení a sepsání řešení máš zhruba jeden měsíc. Zatímco nejjednodušší úlohy by po přečtení úvodního povídání neměly dělat problémy ani úplným začátečníkům, nad tou nejtěžší se může zapotit i ostřílený řešitel programátorských soutěží.</p>
-	<p>Zadání najdeš na našich internetových stránkách. Odevzdávání úloh a další komunikace pak probíhá přes náš webový systém. Po termínu odevzdání tvoje řešení opravíme, obodujeme a okomentujeme. Po vyhodnocení poslední vlny úloh jsou nejúspěšnější řešitelé pozváni na týdenní soustředění. Úspěšní řešitelé semináře (ti, kteří dosáhnou alespoň 60 % celkového počtu bodů) jsou zároveň přijati na Fakultu informatiky MU bez přijímacích zkoušek.</p>
+	<p>
+    Středobodem semináře je graf úloh, který se snažíš projít a po cestě vyřešit co nejvíce úloh zvládneš.
+    Některé části grafu představují základní myšlenky, pojmy a postupy a obsahují jednoduché úlohy, jejichž správnost se vyhodnocuje okamžitě automaticky.
+    Jiné obsahují hlavní soutěžní úlohy, na jejichž vyřešení a sepsání máš zhruba jeden měsíc.
+    Po termínu odevzdání se úloha uzamče, my tvoje řešení opravíme, přidělíme ti za něj body, poskytneme ti k němu zpětnou vazbu a zveřejníme vzorové řešení úlohy.
+    Soutěžní úlohy jsou pak různého charakteru a zatímco nejjednodušší úlohy by po projití úvodních uzlů grafu měl zvládnout každý, nad tou nejtěžší se může zapotit i ostřílený řešitel programátorských soutěží.
+    </p>
+	<p>
+    S ostatními účastníky i organizátory semináře se můžeš potkat na několika výletech.
+    Koncem školního roku pak vyhlásíme výsledky a nejlepší řešitele pozveme na týdenní soustředění K-SCUK.
+    Úspěšní řešitelé semináře (ti, kteří dosáhnou alespoň 60 % celkového počtu bodů) jsou zároveň přijati na Fakultu informatiky MU bez přijímacích zkoušek.
+    </p>
 
 	<h3>Jaké úlohy mám očekávat?</h3>
-	<p>Tvým úkolem ve většině úloh bude řešení algoritmického či programátorského problému. Někdy bude stačit popsat řešení jen obecně pomocí pseudokódu, jindy po tobě budeme chtít i program v Pythonu. Pokud programovat neumíš nebo programuješ v jiném jazyce, nemusíš se ničeho bát. Python tě pomocí cvičných příkladů rychle naučíme. Vždyť přece kolik jazyků umíš, tolikrát jsi člověkem. ;)</p>
-	<p>Některé z našich úloh mohou být složité nebo pracné, i když s dobrým nápadem se většinou dají vyřešit rychle a elegantně. Není třeba vyřešit všechny úlohy - pošli nám, co zvládneš a zbytek si po uzavření vlny můžeš přečíst ve vzorovém řešení. Také není nutné, abys měl(a) úlohu kompletně dořešenou. I pokud máš jen nějaké nápady co s ní, napiš nám je a my tvoji snahu určitě oceníme.</p>
+	<p>
+    Tvým úkolem ve většině úloh bude řešení algoritmického či programátorského problému.
+    Někdy bude stačit popsat řešení jen obecně pomocí pseudokódu, jindy po tobě budeme chtít i program v Pythonu.
+    Pokud programovat neumíš nebo programuješ v jiném jazyce, nemusíš se ničeho bát.
+    Python tě pomocí cvičných příkladů rychle naučíme.
+    Vždyť přece kolik jazyků umíš, tolikrát jsi člověkem. ;)
+    </p>
+	<p>Některé z našich úloh mohou být složité nebo pracné, i když s dobrým nápadem se většinou dají vyřešit rychle a elegantně. Není třeba vyřešit všechny úlohy - pošli nám, co zvládneš a zbytek si po uzavření úlohy můžeš přečíst ve vzorovém řešení. Také není nutné, abys měl(a) úlohu kompletně dořešenou. I pokud máš jen nějaké nápady co s ní, napiš nám je a my tvoji snahu určitě oceníme.</p>
 
 	<h3>Proč se účastnit?</h3>
 	<ul>
-		<li>Procvičíš si své schopnosti, logické a abstraktní myšlení. Získáš nové znalosti a naučíš se nové algoritmy běžně používané v každodenní programátorské praxi.</li>
+	<li>Procvičíš si programátorské, matematické a logické myšlení a schopnost řešit nelehké problémy s využitím počítače. Získáš nové znalosti a naučíš se algoritmy běžně používané v každodenní programátorské praxi.</li>
 
-    <li>Naučíte se své myšlenky jasně formulovat a srozumitelně vyjadřovat</li>
+    <li>Naučíš se své myšlenky jasně formulovat a srozumitelně vyjadřovat.</li>
 
-    <li>Připravíte se lépe na matematickou olympiádu kategorie P a jiné soutěže. Trénink je základ úspěchu!</li>
+    <li>Připravíš se na programátorské i jiné soutěže, např. na matematickou olympiádu kategorie P, ale také na budoucí přijímací zkoušky či pohovory. Trénink je základ úspěchu!</li>
 
     <li>Přiblíží se ti látka vyučovaná na vysokých školách. Dokážeš se lépe rozhodnout, co chceš studovat, a pokud se rozhodneš pro informatiku, získáš mírný náskok na své budoucí spolužáky.</li>
 
-		<li>Budeš-li patřit mezi úspěšné řešitele, můžeš se těšit na přijetí na Fakultu informatiky MU bez přijímacích zkoušek.</li>
+	<li>Budeš-li patřit mezi úspěšné řešitele, můžeš se těšit na přijetí na Fakultu informatiky MU bez přijímacích zkoušek.</li>
 
     <li>A hlavně, když budeš svědomitě řešit, jistě tě nemine odměna v podobě týdenního soustředění.</li>
 
