--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -33,7 +33,8 @@
               <img src="img/info-ksi.svg" style="max-width:90%;"/>
             {{/link-to}}
             <p class="about-paragraph" style="font-size:18px;" align="justify">
-              KSI, neboli Korespondenční Seminář z Informatiky, je celoroční soutěž pro středoškoláky z České i Slovenské republiky organizovaná studenty Fakulty Informatiky Masarykovy Univerzity. Cílem semináře je seznámit řešitele se zajímavými oblastmi informatiky a procvičit programátorské, matematické a logické myšlení. Seminář je uzpůsoben jak pro úplné začátečníky, kteří si na jednodušších příkladech procvičí danou problematiku, tak pro zkušenější řešitele, kteří mají možnost základy přeskočit a rovnou se pustit do záludnějších úloh.
+              KSI, neboli Korespondenční Seminář z Informatiky, je celoroční soutěž pro středoškoláky z České i Slovenské republiky organizovaná studenty Fakulty Informatiky Masarykovy Univerzity. Cílem semináře je seznámit řešitele se zajímavými oblastmi informatiky a procvičit programátorské, matematické a logické myšlení.
+              Seminář je uzpůsoben jak pro úplné začátečníky, kteří si na jednoduchých příkladech procvičí danou problematiku, tak pro zkušenější řešitele, kteří se pokusí pokořit hlavní soutěžní úlohy.
             </p>
           </div>
           <div class="col-xs-12 col-sm-4">
@@ -50,7 +51,8 @@ V září se mohou úspěšní řešitelé těšit na týdenní soustředění K
               <img src="img/info-achievement.svg" style="max-width:90%;"/>
             {{/link-to}}
             <p class="about-paragraph" style="font-size:18px;" align="justify">
-              V průběhu řešení semináře můžeš za překonávání milníků, odevzdávání zajímavých řešení nebo třeba za účast na KSI akcích získat nejrůznější odznáčky. Podaří se ti jich získat co nejvíc? Ulovíš i ty nejvzácnější? Soutěž s ostatními řešiteli a posbírej je všechny!
+              Za každou vyřešenou úlohu dostáváš body. Pokud budeš mít na konci roku alespoň 60 % z celkového možného počtu bodů, staneš se úspěšným řešitelem.
+              V průběhu řešení semináře můžeš navíc za překonávání milníků, odevzdávání zajímavých řešení nebo třeba za účast na KSI akcích obdržet nejrůznější odznáčky. Podaří se ti jich získat co nejvíc? Ulovíš i ty nejvzácnější? Soutěž s ostatními řešiteli a posbírej je všechny!
             </p>
           </div>
 
