--- a/app/templates/components/info-general.hbs
+++ b/app/templates/components/info-general.hbs
@@ -1,7 +1,7 @@
 <div class="alert alert-info" role="alert">
 	<div style="text-align:center">
 	  	<p class="navbar-btn">
-	  		{{text}}
+	  		{{{text}}}
 	     </p>
 	</div>
 </div>
