Fix bug in quiz, show error on incorrect answer

--- a/app/templates/components/code-module.hbs
+++ b/app/templates/components/code-module.hbs
@@ -39,7 +39,9 @@
     {{#if script_graphics_output}}
         <div class="row">
             <label>Grafický výstup</label><br>
-            <img src="{{script_graphics_output}}"/>
+            <div style="align: center;">
+                <img src="{{script_graphics_output}}"/>
+            </div>
         </div>
     {{/if}}
 </div>
