--- a/app/templates/components/header-component.hbs
+++ b/app/templates/components/header-component.hbs
@@ -61,7 +61,7 @@
             {{else}}
               <li>
                 <p class="navbar-btn" data-toggle="modal" data-target="#login-modal" style="margin-left:20px">
-                      <a href="javascript:void(0)" class="btn btn-header" style="width:130px" id="login_button">Přihlásit se</a>
+                      <a href="javascript:void(0)" class="btn btn-header" style="width:130px;" id="login_button">Přihlásit se</a>
                 </p>
               </li>
               <li>
