--- a/app/styles/base/typography.scss
+++ b/app/styles/base/typography.scss
@@ -14,6 +14,10 @@ h6 {
     font-weight: 700;
 }
 
+.task-paragraph {
+
+}
+
 .org-caption {
   text-transform: uppercase;
   font-family: Arial, Helvetica, sans-serif;
