--- a/app/templates/forgot-password.hbs
+++ b/app/templates/forgot-password.hbs
@@ -1,12 +1,12 @@
 <section id="forgot-password" class="container content-section" style="margin-bottom:40px; margin-top:20px">
 	<!-- Sekcia noviniek -->
   <h2>Zapomenuté heslo</h2>
-  <div class="alert alert-info">
-    Zapoměl/a jsi heslo? Napiš nám svůj e-mail a my ti na něj ihned pošleme nové přihlašovací údaje.
-  </div>
   {{#if finished}}
   	{{info-general text="Email s instrukcemi ti byl poslán."}}
   {{else}}
+  		<div class="alert alert-info">
+    Zapomněl/a jsi heslo? Napiš nám svůj e-mail a my ti na něj ihned pošleme nové přihlašovací údaje.
+  </div>
 	  <div class="password-email-container">
 	  	{{#validatable-form action="send" model=model}}
 		    {{input value=model.email type="email" class="form-control" id="email" required=true placeholder="e-mail"}}
