--- a/app/templates/task/evaluation.hbs
+++ b/app/templates/task/evaluation.hbs
@@ -11,7 +11,7 @@
 		</div>
 	</div>
 
-  {{#if model.achievements}}
+  {{#if model.details.achievements}}
     <div style="margin-top:30px">
       <h5>Trofeje</h5>
       <hr>
