--- a/app/templates/task/assignment.hbs
+++ b/app/templates/task/assignment.hbs
@@ -16,4 +16,11 @@
       {{warning-general disable_warning=true text="Tato úloha již byla uzavřena a není možné ji odevzdat. Navazující úlohy ti však byly automaticky odemčeny. Navíc se můžeš podívat na vzorové řešení úlohy."}}
     {{/if}}
   </div>
+  {{#if finished}}
+    <div class="text-center">
+        {{#link-to "tasks" type="button" class="btn btn-primary btn-lg"}}
+        <h3>Pokračovat dále</h3>
+        {{/link-to}}
+    </div>
+  {{/if}}
 </div>
