--- a/app/templates/change-password.hbs
+++ b/app/templates/change-password.hbs
@@ -1,7 +1,7 @@
 <section id="forgot-password" class="container content-section" style="margin-bottom:40px; margin-top:20px" align="center">
 	<!-- Sekcia noviniek -->
   <h2>Změna hesla</h2>
-  <div class="password-email-container">
+  <div class="password-email-container stickycolumn">
     <input type="password" name="pass" placeholder="staré heslo">
     <input type="password" name="pass" placeholder="nové heslo">
     <input type="password" name="pass" placeholder="nové heslo znovu">
