Fix feedback (close #87)

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -48,7 +48,7 @@
           {{input type="email" class="form-control" id="zpetna-vazba-email" placeholder="e-mail" title="E-mailová adresa je neplatná" value=feedback_email}}
         </div>
         <div class="modal-footer">
-          <button type="submit" class="btn btn-primary" data-dismiss="modal" style="width: 200px">Odeslat</button>
+          <button type="submit" class="btn btn-primary" style="width: 200px">Odeslat</button>
         </div>
       {{/validatable-form}}
     </div>
