Add nbsp to paragraphs in templates/index.hbs

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -33,7 +33,7 @@
               <img src="img/info-ksi.svg" style="max-width:90%;"/>
             {{/link-to}}
             <p class="about-paragraph" style="font-size:18px;" align="justify">
-              KSI, neboli Korespondenční Seminář z Informatiky, je celoroční soutěž pro středoškoláky z České i Slovenské republiky organizovaná studenty Fakulty Informatiky Masarykovy Univerzity. Cílem semináře je seznámit řešitele se zajímavými oblastmi informatiky a procvičit programátorské, matematické a logické myšlení.
+              KSI, neboli Korespondenční Seminář z&nbsp;Informatiky, je celoroční soutěž pro středoškoláky z&nbsp;České i&nbsp;Slovenské republiky organizovaná studenty Fakulty informatiky Masarykovy univerzity. Cílem semináře je seznámit řešitele se zajímavými oblastmi informatiky a&nbsp;procvičit programátorské, matematické a&nbsp;logické myšlení.
               Seminář je uzpůsoben jak pro úplné začátečníky, kteří si na jednoduchých příkladech procvičí danou problematiku, tak pro zkušenější řešitele, kteří se pokusí pokořit hlavní soutěžní úlohy.
             </p>
           </div>
@@ -42,8 +42,8 @@
               <img src="img/info-kscuk.svg" style="max-width:90%;"/>
             </a>
             <p class="about-paragraph" style="font-size:18px;" align="justify">
-              Při řešení našeho semináře nemusíš jen sedět doma za počítačem. Během roku pro všechny řešitele pravidelně pořádáme výlety (Ksílety), na kterých se můžeš seznámit s ostatními řešiteli, osobně poznat organizátory a zahrát si kupu zajímavých her.
-V září se mohou úspěšní řešitelé těšit na týdenní soustředění K-SCUK,  které je společné pro KSI a ekologický seminář KEKS. Náplní soustředění je jak odborný program, díky kterému se opět naučíš něco nového z informatiky, tak bohatý doprovodný program.
+              Při řešení našeho semináře nemusíš jen sedět doma za počítačem. Během roku pro všechny řešitele pravidelně pořádáme výlety (Ksílety), na kterých se můžeš seznámit s&nbsp;ostatními řešiteli, osobně poznat organizátory a&nbsp;zahrát si kupu zajímavých her.
+V&nbsp;září se mohou úspěšní řešitelé těšit na týdenní soustředění K-SCUK, které je společné pro KSI a&nbsp;ekologický seminář KEKS. Náplní soustředění je jak odborný program, díky kterému se opět naučíš něco nového z&nbsp;informatiky, tak bohatý doprovodný program.
             </p>
           </div>
           <div class="col-xs-12 col-sm-4">
@@ -51,8 +51,8 @@ V září se mohou úspěšní řešitelé těšit na týdenní soustředění K
               <img src="img/info-achievement.svg" style="max-width:90%;"/>
             {{/link-to}}
             <p class="about-paragraph" style="font-size:18px;" align="justify">
-              Za každou vyřešenou úlohu dostáváš body. Pokud budeš mít na konci roku alespoň 60 % z celkového možného počtu bodů, staneš se úspěšným řešitelem.
-              V průběhu řešení semináře můžeš navíc za překonávání milníků, odevzdávání zajímavých řešení nebo třeba za účast na KSI akcích obdržet nejrůznější odznáčky. Podaří se ti jich získat co nejvíc? Ulovíš i ty nejvzácnější? Soutěž s ostatními řešiteli a posbírej je všechny!
+              Za každou vyřešenou úlohu dostáváš body. Pokud budeš mít na konci roku alespoň 60 % z&nbsp;celkového možného počtu bodů, staneš se úspěšným řešitelem.
+              V&nbsp;průběhu řešení semináře můžeš navíc za překonávání milníků, odevzdávání zajímavých řešení nebo třeba za účast na KSI akcích obdržet nejrůznější odznáčky. Podaří se ti jich získat co nejvíc? Ulovíš i&nbsp;ty nejvzácnější? Soutěž s&nbsp;ostatními řešiteli a&nbsp;posbírej je všechny!
             </p>
           </div>
 
