--- a/app/templates/registration.hbs
+++ b/app/templates/registration.hbs
@@ -12,7 +12,7 @@
 
       <div class="form-group">
         <label for="email">E-mail:</label>
-        {{input value=model.email type="email" class="form-control" id="email" required=true placeholder="e-mail"}}
+        {{input value=model.email type="email" class="form-control" id="email" required=true placeholder="e-mail" autofocus="autofocus"}}
       </div>
       {{#if taken}}
         {{warning-general text="Tato e-mailová adresa je již použita."}}
