modules description align

--- a/app/templates/components/code-module.hbs
+++ b/app/templates/components/code-module.hbs
@@ -1,5 +1,5 @@
 <div class="controls">
-    <div class="row" style="margin-left:0px">
+    <div class=row style="margin-left:0px; margin-right:10px">
         {{{module.description}}}
     </div>
     <button class="btn btn-primary btn-task inline" style="margin-top:20px" {{action "toggle_info"}}>{{info_button_text}}</button>
