--- a/app/templates/components/quiz-module.hbs
+++ b/app/templates/components/quiz-module.hbs
@@ -1,4 +1,4 @@
-<div class="row" style="margin-left:0px">
+<div class="row" style="margin-left:0px; margin-right:10px">
 	<div style="margin-bottom: 20px">
 		{{{module.description}}}
 	</div>
