--- a/app/templates/components/file-module.hbs
+++ b/app/templates/components/file-module.hbs
@@ -1,4 +1,4 @@
-<div class=row style="margin-left:0px">
+<div class="row" style="margin-left:0px; margin-right:10px">
 	{{{module.description}}}
 </div>
 <div class="alert alert-warning" role="alert" style="margin-left:0px; margin-top:20px">
