--- a/app/templates/components/sortable-module.hbs
+++ b/app/templates/components/sortable-module.hbs
@@ -1,4 +1,4 @@
-<div class="row" style="margin-left:20px">
+<div class="row" style="margin-left:20px; margin-right:10px">
 	{{{module.description}}}
 </div>
 <div style="margin-left:20px; margin-right:20px">
