--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -31,17 +31,17 @@
 
 	<h3>Proč se účastnit?</h3>
 	<ul>
-	<li>Procvičíš si programátorské, matematické a logické myšlení a schopnost řešit nelehké problémy s využitím počítače. Získáš nové znalosti a naučíš se algoritmy běžně používané v každodenní programátorské praxi.</li>
+	<li><p>Procvičíš si programátorské, matematické a logické myšlení a schopnost řešit nelehké problémy s využitím počítače. Získáš nové znalosti a naučíš se algoritmy běžně používané v každodenní programátorské praxi.</p></li>
 
-    <li>Naučíš se své myšlenky jasně formulovat a srozumitelně vyjadřovat.</li>
+    <li><p>Naučíš se své myšlenky jasně formulovat a srozumitelně vyjadřovat.</p></li>
 
-    <li>Připravíš se na programátorské i jiné soutěže, např. na matematickou olympiádu kategorie P, ale také na budoucí přijímací zkoušky či pohovory. Trénink je základ úspěchu!</li>
+    <li><p>Připravíš se na programátorské i jiné soutěže, např. na matematickou olympiádu kategorie P, ale také na budoucí přijímací zkoušky či pohovory. Trénink je základ úspěchu!</p></li>
 
-    <li>Přiblíží se ti látka vyučovaná na vysokých školách. Dokážeš se lépe rozhodnout, co chceš studovat, a pokud se rozhodneš pro informatiku, získáš mírný náskok na své budoucí spolužáky.</li>
+    <li><p>Přiblíží se ti látka vyučovaná na vysokých školách. Dokážeš se lépe rozhodnout, co chceš studovat, a pokud se rozhodneš pro informatiku, získáš mírný náskok na své budoucí spolužáky.</p></li>
 
-	<li>Budeš-li patřit mezi úspěšné řešitele, můžeš se těšit na přijetí na Fakultu informatiky MU bez přijímacích zkoušek.</li>
+		<li><p>Budeš-li patřit mezi úspěšné řešitele, můžeš se těšit na přijetí na Fakultu informatiky MU bez přijímacích zkoušek.</p></li>
 
-    <li>A hlavně, když budeš svědomitě řešit, jistě tě nemine odměna v podobě týdenního soustředění.</li>
+    <li><p>A hlavně, když budeš svědomitě řešit, jistě tě nemine odměna v podobě týdenního soustředění.</p></li>
 
 	</ul>
 
@@ -75,5 +75,5 @@
 	    A: Ano, pokud jsi úspěšný řešitel semináře v kterémkoli roce a budeš se po maturitě hlásit na FI, budeš přijat.
 	  </div>
 	</div>
-	<p id="date-text">Máš jinou otázku, na kterou ti zde chybí odpověď? Neváhej nám napsat na <a href="mailto:ksi@fi.muni.cz">ksi@fi.muni.cz</a>.</p>
+	<p>Máš jinou otázku, na kterou ti zde chybí odpověď? Neváhej nám napsat na <a href="mailto:ksi@fi.muni.cz">ksi@fi.muni.cz</a>.</p>
 </section>
