--- a/app/styles/base/typography.scss
+++ b/app/styles/base/typography.scss
@@ -3,6 +3,8 @@
 //
 $border-h-width: 3px;
 
+$base-font-size: 16px;
+
 h1,
 h2,
 h3,
@@ -14,8 +16,10 @@ h6 {
     font-weight: 700;
 }
 
-.task-paragraph {
-
+p {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: $base-font-size;
+  margin-top: .5em; color: ksi-color('text-dark');
 }
 
 .org-caption {
