Implement text between questions in quiz

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -39,7 +39,7 @@
           {{#if feedback_error}}
             {{warning-general text=feedback_error}}
           {{/if}}
-          {{textarea class="form-control" rows="3" style="resize:none;" required=true title="Text je povinný" value=feedback_text}}
+          {{textarea class="form-control" rows="3" style="resize:none;" required=true title="Text je povinný" value=feedback_text id="feedback-textarea"}}
           <br>
           <p><b>Tvá e-mailová adresa - volitelně</b></p>
 
@@ -68,7 +68,7 @@
     {{/if}}
       {{#validatable-form action="login"}}
         <div>
-          {{input type="email" value=identification placeholder="e-mail" class="form-control" required=true}}
+          {{input type="email" value=identification placeholder="e-mail" class="form-control" required=true id="login-email" autofocus="autofocus"}}
         </div>
         <div style="margin-top:5px">
           {{input type="password" value=password placeholder="heslo" class="form-control" required=true}}
