--- a/app/templates/components/quiz-module.hbs
+++ b/app/templates/components/quiz-module.hbs
@@ -8,6 +8,7 @@
 	<div class="panel panel-task">
 		<div class="panel-body">
 			{{#each module.questions.questions as |question index|}}
+						{{{question.text}}}
 						<div class="panel panel-ksi">
 						  <div class="panel-heading panel-heading-ksi">{{{question.question}}}</div>
 						  <div class="panel-body">
