Add dynamic indent in sortable (close #97)

--- a/app/styles/components/modules.scss
+++ b/app/styles/components/modules.scss
@@ -1,5 +1,5 @@
 .sortable {
-	width: 80%;
+	width: 100%;
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
@@ -12,7 +12,7 @@
 	background: ksi-color-level('primary-dark',9.5);
 	margin: 5px;
 	padding: 5px;
-	height: 30px;
+	min-height: 30px;
 }
 .handle {
 	cursor: move;
